--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>repl.it</title>
 
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!--Bootstrap JS-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!--JQuery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+
+    <link href="style.css" rel="stylesheet" type="text/css" />
+
+  </head>
+  <body>
+    <!--Header-->
+    <div class='container'>
+      <div class='row justify-content-center'  >
+        <h1>COVID-19 Updates</h1>
+        <img src=''>
+      </div>
+    </div>
+
+    <!--Latest News-->
+    <div class='container'>
+      <div class='row'>
+        <!--Latest News (Summary)-->
+        <div class='col-6' id='globalSummary' >
+          Global Summary
+        </div>
+
+        <!--Latest News (Carousel)-->
+        <div class='col-6'>
+          <div id="newsCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#newsCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#newsCarousel" data-slide-to="1"></li>
+              <li data-target="#newsCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#newsCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#newsCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!--Data Search-->
+    <div class='container'>
+      <div class='row'>
+        Search & Charts
+      </div>
+    </div>
+
+
+    <script src="script.js"></script>
+  </body>
+</html>
