added confirmed cases line chart, new cases line chart and statistics pie chart

--- a/index.html
+++ b/index.html
@@ -355,18 +355,22 @@
     <!--Data Display -->
     <div class='container'>
       <div class='row'>
-        <div class='col-6'>
           <div id='statistics'>
           </div>
-          <div id="weeklyChart">
+          <div id="countryPieChart">
+          </div>
+          <div id="confirmedChart">
           </div> 
-          <div id="monthlyChart">
-          </div> 
-        </div>
-
+          <div id="newChart">
+          </div>
       </div>
     </div>
 
+
+
+    <!-- Hidden Div -->
+    <div>
+    </div>
 
 
     <script src="script.js"></script>
