Updated to display country name below country flag

--- a/index.html
+++ b/index.html
@@ -393,7 +393,8 @@
       </div>
       <div id='countryStats' style="min-height:300px;display:none;">
         <div style="text-align:center;">  
-          <img id="countryFlag" style="height:120px;"  style="padding:15px;" src="" alt='Country Flag'>
+          <img id="countryFlag" style="height:120px;"  style="padding:15px;;" src="" alt='Country Flag'>
+          <h5 id="countryNameDisplay" style="margin-top:15px;font-size:150%"></h5>
         </div>
 
         <!-- Country Stats & Pie Chart -->
