--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a id="img0Link" href="" target="_blank"style=:"height:100%">
                 <img id="img0" class="d-block w-100 carouselimg" src="" alt="News Image 1">
                 <div class="carousel-caption caption">
-                  <h6 id="caption0" class="d-block">Caption 0</h6>
+                  <h6 id="caption0" class="d-block"></h6>
                   <p id="description0" class="d-block"></p>
                 </div>
               </div>
@@ -118,7 +118,7 @@
                 <a id="img1Link" href="" target="_blank" style=:"height:100%">
                 <img id="img1" class="d-block w-100 carouselimg" src="" alt="News Image 2">
                 <div class="carousel-caption caption">
-                  <h6 id="caption1" class="d-block">Caption 1</h6>
+                  <h6 id="caption1" class="d-block"></h6>
                   <p id="description1" class="d-block"></p>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                 <a id="img2Link" href="" target="_blank" style=:"height:100%">
                 <img id="img2" class="d-block w-100 carouselimg" src="" alt="News Image 3">
                 <div class="carousel-caption caption">
-                  <h6 id="caption2" class="d-block">Caption 2</h6>
+                  <h6 id="caption2" class="d-block"></h6>
                   <p id="description2" class="d-block"></p>
                 </div>
               </div>
