Added comments to HTML and JS. HTML, CSS ran through W3C vaildator, JS ran through Esprima Syntax Validator. Minor edits to code.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
     </div>
       
-      <!--Map-->
+      <!--Map Container-->
     <div class='container' style="margin-top:50px;">
     <h4>World Map</h4>
       <div id="mapid">
@@ -390,9 +390,7 @@
           </select>
 
           <!-- Search Button -->
-          <!-- <div> -->
-            <button id='searchBtn' style="height;100%;margin-bottom:30px;">Search!</button>
-          <!-- </div> -->
+          <button id='searchBtn' style="height:100%;margin-bottom:30px;">Search!</button>
         </div>
       </div>
 
@@ -451,8 +449,10 @@
     </div>
 
 
-    <!--Additional Information-->
+    <!--Extra Information Container-->
     <div class="container">
+
+      <!--Staying Safe Section-->
       <h4>Staying Safe</h4>
       <h6 style="text-align:center;">Follow 3 these simple steps to minimise the risk of being infected!</h6>
       <div class="row" style="margin-bottom:30px;justify-content:space-around;">
@@ -474,25 +474,28 @@
         </div>
       </div>
 
+      <!--Other Sources of Information Section-->
       <h4>Other Sources Of Information</h4>
-      <div class="row infodiv" style="padding-bottom:80px;">
-        <div class="col-xl-4 col-lg-4 col-sm-5 col-8 my-auto">
+      <div class="row infodiv" style="padding-bottom:20px;">
+        <div class="col-xl-4 col-lg-4 col-sm-6 col-8 my-auto">
           <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="blank">
             <img class="infoimg" src="https://www.who.int/ResourcePackages/WHO/assets/dist/images/logos/en/h-logo-white.svg" alt="World Health Organisation">
           </a>
         </div>
-        <div class="col-xl-4 col-lg-4 col-sm-5 col-8 my-auto">
+        <div class="col-xl-4 col-lg-4 col-sm-6 col-8 my-auto">
           <a href="https://coronavirus.jhu.edu/map.html" target="blank">
             <img class="infoimg" src="https://coronavirus.jhu.edu/static/media/enterprise-medicine.logo.small.horizontal.white.581be190.png" alt="John Hopkins University">
           </a>
         </div>
-        <div class="col-xl-4 col-lg-4 col-sm-5 col-8 my-auto">
+        <div class="col-xl-4 col-lg-4 col-sm-8 col-8 my-auto">
           <a href="https://www.worldometers.info/coronavirus/" target="blank">
             <img class="infoimg" src="https://www.worldometers.info/img/worldometers-logo.gif" alt="Worldometer">
           </a>
         </div>
       </div>
     </div>
+
+    <!--Footer-->
     <footer class="footer-copyright py-3" style="align-items:center;justify-content:center; font-size:x-small;background-color:rgba(255,255,255,0.8);">
       <div class="container">
         <div class="row">
